--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@heroicons/react": "^2.1.3",
 		"@material-tailwind/react": "^2.1.9",
+		"axios": "^1.7.2",
 		"graphql": "^16.8.1",
 		"graphql-request": "^6.1.0",
 		"react": "^18.2.0",
