--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
 	"name": "backend",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "server.js.js",
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js"
+		"start": "node server.js"
 	},
 	"keywords": [],
 	"author": "",
