--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@railway/cli": "^3.11.0",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"multer": "^1.4.5-lts.1",
