--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,15 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.7.2",
 		"cloudinary": "^2.2.0",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
+		"form-data": "^4.0.0",
+		"fs": "^0.0.1-security",
 		"multer": "^1.4.5-lts.1",
-		"mysql2": "^3.10.1"
+		"mysql2": "^3.10.1",
+		"path": "^0.12.7",
+		"ssh2-sftp-client": "^10.0.3"
 	}
 }
